<resources>
    <string name="app_name">Calculadora</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product">&#215;</string> <!-- Signo de multiplicacion en utf8 -->
    <string name="division">&#247;</string> <!-- Signo de division en utf8 -->
    <string name="equals">=</string>
    <string name="clear_text">C</string>
    <string name="clear_mem">CE</string>
    <string name="copen">(</string>
    <string name="close">)</string>
</resources>
